NTI-9451 NTI-9452 make sure the video upload dialog is ontop of the discussion dialog with proper contrast

--- a/src/attachments/video/Button.css
+++ b/src/attachments/video/Button.css
@@ -2,5 +2,10 @@
 	& :global(.video-embed-input) {
 		max-width: 23.4375rem;
 		width: 100%;
+		box-shadow: 0 1px 2px 1px rgba(0, 0, 0, 0.15);
 	}
+}
+
+:global(html.window-open) .insert-video-dialog {
+	z-index: 1003;
 }
